--- a/Assignment2_Matt_Tucker/RioHome.html
+++ b/Assignment2_Matt_Tucker/RioHome.html
@@ -17,7 +17,7 @@
   			<li><a href="medalTable.html.php">Medal Table</a></li>
   			<li><a href="athleteController.php">Search Athletes</a></li>
   			<li><a href="countryController.php">Search Countries</a></li>
-  			<li><a href="addAthlete.html.php">Add Athletes</a></li>
+  			<li><a href="addAthlete.html.php">Add Athlete</a></li>
   			<li><a href="addCountry.html.php">Add Countries</a></li>
   			<li><a href="deleteAthlete.html.php">Delete Athlete</a></li>
 
