Finished country search and added delete athlete function

--- a/Assignment2_Matt_Tucker/RioHome.html
+++ b/Assignment2_Matt_Tucker/RioHome.html
@@ -19,16 +19,17 @@
   			<li><a href="countryController.php">Search Countries</a></li>
   			<li><a href="addAthlete.html.php">Add Athlete</a></li>
   			<li><a href="addCountry.html.php">Add Countries</a></li>
-  			<li><a href="deleteAthlete.html.php">Delete Athlete</a></li>
+  			<li><a href="temp.php">Reset Database</a></li>
 
 		</ul>
 	</div>
 
 	<div class="mainContent"> 
-  		<h2>Some Example Content</h2>
-  		<h3>Try to scroll this area, and see how the sidenav sticks to the page</h3>
-  		<p>Notice that this div element has a left margin of 25%. This is because the side navigation is set to 25% width. If you remove the margin, the sidenav will overlay/sit on top of this div.</p>
-  		<p>Also notice that we have set overflow:auto to sidenav. This will add a scrollbar when the sidenav is too long (for example if it has over 50 links inside of it).</p>  
+  		<h2>Rio Olympics Athlete Management System</h2>
+  		<h3>Introduction</h3>
+  		<p>This tool has been developed to allow Olympic management to add, search, and delete athletes from the athlete database.</p>
+  		<p>It will also keep a running tally of medals won and how many medals each country has.</p>
+  		<p>Please use the menu to the left to navigate around the management system.</p>
 	</div>
 </body>
 
